crates/naos-core/tests/fixtures/conformance/rejected/fragment-child.wc.tsx
export function FragmentChild() {
  return (
    <section>
      <>
        <span>Fragment</span>
      </>
    </section>
  )
}
